@@ -544,6 +544,7 @@
     "*://*.science.org/*",
     "*://*.sciencesetavenir.fr/*",
     "*://*.scientificamerican.com/*",
+    "*://*.schwarzwaelder-bote.de/*",
     "*://*.scmp.com/*",
     "*://*.scotsman.com/*",
     "*://*.sdbj.com/*",
@@ -574,6 +575,7 @@
     "*://*.statista.com/*",
     "*://*.stocknews.com/*",
     "*://*.studocu.com/*",
+    "*://*.stuttgarter-nachrichten.de/*",
     "*://*.stuttgarter-zeitung.de/*",
     "*://*.stylist.co.uk/*",
     "*://*.sudinfo.be/*",
@@ -740,5 +742,5 @@
     "*://*.wyleex.com/*",
     "*://webcache.googleusercontent.com/*"
   ],
-  "version": "3.2.5.2"
+  "version": "3.2.5.3"
 }
