@@ -155,10 +155,26 @@
     "amp_unhide": 1,
     "new_site": 1
   },
+  "Schwarzwälder Bote": {
+    "domain": "schwarzwaelder-bote.de",
+    "allow_cookies": 1,
+    "block_regex": "\\.piano\\.io",
+    "useragent": "googlebot",
+    "cs_code": "[{\"cond\":\"div.mod-paywall\", \"rm_elem\":1}]",
+    "new_site": 1
+  },
   "Star Tribune": {
     "domain": "startribune.com",
     "remove_cookies_select_drop": ["client_id"],
     "upd_version": "3.2.5.2"
+  },
+  "Stuttgarter Nachrichten": {
+    "domain": "stuttgarter-nachrichten.de",
+    "allow_cookies": 1,
+    "block_regex": "\\.piano\\.io",
+    "useragent": "googlebot",
+    "cs_code": "[{\"cond\":\"div.mod-paywall\", \"rm_elem\":1}]",
+    "new_site": 1
   },
   "Stuttgarter Zeitung": {
     "domain": "stuttgarter-zeitung.de",
